tests/macro-tests/tests/expand/fail/first.expanded.rs
error: expected item, found `1234`
 --> /tests/expand/fail/first.rs:1:1
  |
1 | 1234
  | ^^^^ expected item
  |
  = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
